@@ -1,0 +1,95 @@
+<!doctype html><html lang=en><link href='data:image/gif;base64,R0lGODlhEAAQAPH/AAAAAP8AAP8AN////yH5BAUAAAQALAAAAAAQABAAAAM2SLrc/jA+QBUFM2iqA2bAMHSktwCCWJIYEIyvKLOuJt+wV69ry5cfwu7WCVp2RSPoUpE4n4sEADs=' rel=icon><title>KISS - 20200811a</title><meta charset=utf-8><meta name=Description content="An independent Linux distribution with a focus on simplicity and the concept of less is more."><meta name=viewport content="width=device-width,initial-scale=1"><style>body{overflow-y:scroll;font:16px monospace,monospace}img,.c{display:table-cell;max-width:999px;max-width:80ch}pre{margin:0;overflow-x:hidden}@media(max-width:999px){.c{display:block;font-size:1.94vw}}@media(prefers-color-scheme:dark){body{background:#000;color:#fff}a{color:#6CF}}</style><div style="display:table;margin:16px auto"><div class=c><pre style="top:0;position:sticky;user-select:none;padding-right:64px">
+<a href=/ style="text-decoration:none;color:#a00">
+|/
+|\ISS
+</a>
+<a href=/news>News</a>
+<a href=/blog>Blog</a>
+
+<a href=/wiki>Wiki (NEW!)</a>
+
+<a href=/install>Install KISS</a>
+<a href=/faq>FAQ</a>
+
+<a href=/package-system>Package System</a>
+<a href=/package-manager>Package Manager</a>
+<a href=/software>Software</a>
+
+<a href=/guidestones>Guidestones</a>
+
+<a href=/testimonials>Testimonials</a>
+<a href=/screenshots>Screenshots</a>
+<a href=/team>Team</a>
+
+<a href=/contact>Contact</a>
+<a href=/donate>Donate</a>
+
+<a href=https://github.com/kisslinux/>GitHub</a>
+<a href=https://git.k1ss.org>Git (mirror)</a>
+
+</pre></div><div class=c><pre>
+
+Subject Changes to repositories using symlinks to /var/db/kiss/repo
+From	Dylan Araps &lt;dylan@k1ss.org&gt;
+Date	Wed, 11 May 2020 03:21:09 +0100
+
+In two weeks' time, the assumption that the official repositories live in
+/var/db/kiss/repo will be removed. This change only affects repositories which
+contain symlinks to this location.
+
+This change is being made for a number of reasons.
+
+- There should be no forced system-wide repository. Users should be free to put
+  the official repositories wherever they like (or even safely remove them). In
+  other words, the official repositories should not be something special.
+
+- The official repositories can be removed from the installation medium. This
+  reduces the size of the tarball by an amount that can only grow over time.
+
+- Users will now learn about repositories and how they work as a part of the
+  installation process. The guide will also include information about the
+  Community repository (and the KISS universe) early on.
+
+
+Repositories with symlinks to /var/db/kiss/repo contain packages based on
+official repository packages. The maintainer may only need to change a package's
+build file so they symlink the rest of the files to the official repositories
+(removing the maintenance burden and duplicate effort).
+
+The now recommended way to layer packages in this manner is to use Git
+submodules. Add the official repositories to your repository as a submodule,
+update your symlinks to /relatively/ point there and the package manager will
+handle the rest.
+
+An example repository can be found here: $/<a href=https://github.com/dylanaraps/kiss-submodule-links>dylanaraps/kiss-submodule-links</a>
+
+Notes about this change:
+
+- The package manager is already aware of submodules and this already works.
+- It makes repository dependence explicit rather than implicit.
+- The submodule is standalone and uninfluenced by KISS_PATH.
+- It required no code.
+
+This change will be made in two weeks. Everything is ready on my end, the time
+is given for repository owners to make the needed change. If all goes well and
+there are no qualms, this change may be made before the deadline. We'll see
+where the wind takes us.
+
+Discussion will be kept open until the change is made. Please leave your
+thoughts in the link below or somewhere I can see them. Happy to answer any
+questions you may have. :)
+
+Discussion: $/<a href=https://github.com/kisslinux/repo/issues/209>kisslinux/repo/issues/209</a>
+
+---
+
+    Dylan
+
+
+________________________________________________________________________________
+
+Dylan Araps (C) 2019-2020
+
+Linux(R) is the registered trademark of Linus Torvalds in the U.S. and
+other countries.
+</pre></div></div>
